# microservice_kubernetes_webinar

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
poster/: .gitlab-ci.yml  docker-entrypoint.sh  pyproject.toml
poster/poster/: main.py
reporter/: .gitlab-ci.yml  Dockerfile  docker-entrypoint.sh  pyproject.toml
reporter/reporter/: main.py
scores/: .gitlab-ci.yml  Dockerfile  docker-entrypoint.sh  pyproject.toml
scores/alembic/: env.py
scores/alembic/versions/: 229236b6dde7_score_table.py
scores/scores/: database.py  main.py  models.py  schemas.py
